# FluxMod-Bot

./: .gitattributes  .gitignore  Dockerfile  README.md  SETUP.md  bot.py  debug_image_module.py  debug_image_server.py  pyproject.toml  requirements.txt
.github/workflows/: rufflint.yml
LHS/: .gitignore  README.md  README_SERVER.md  __init__.py  config.json  gradio_ui.py  image_inference_server.py  image_moderation.py  inference_server.py  launch.py  metadata.json  requirements_server.txt  test_client.py
cogs/: automod.py  ban.py  configs.py  guilds.py  help.py  helper.py  info.py  kick.py  lhs_moderation.py  moderation.py  mute.py  purge.py  warnSystem.py
data/: automod_presets.json  logs.json  warns.json
database/: automod.py  guilds.py  mongo.py  warns.py
tests/: README.md  smoke_test.py  test_lhs.py
utils/: automod_dashboard.py  automod_engine.py  automod_manager.py  automod_models.py  datawrapper.py  delete_after.py  embed_builder.py  fluxer_user.py  json_utils.py  lhs_client.py  lhs_model_downloader.py  lhs_server_manager.py  log.py  mongodb.py  resolvers.py  tasks.py  warn_storage.py
